--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,8 +4,8 @@
     box-sizing: border-box;
 }
 
-div {
-  border : 2px solid green; 
+div.section {
+  border : 0.5px solid green; 
 }
 
 body {
@@ -68,7 +68,7 @@ body {
 .section {
     margin-top : 75px; 
     top : 75px; 
-    height: calc(100vh - 90px); /* Adjust height to compensate for navbar */
+    height: calc(100vh + 60px); /* Adjust height to compensate for navbar */
     width: 100%;
     position: relative;
     background-size: cover;
@@ -97,7 +97,7 @@ body {
 }
 
 .container {
-    height: 100%;
+    height: calc(100% - 150px);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -106,13 +106,14 @@ body {
     margin: 75px 20px;
 }
 
-.sidebar {
+#sidebar {
     width: 275px;
     background-color: #333;
     color: white;
     padding: 15px;
     height: 100vh;
     position: fixed;
+    top : 75px ;
     left: -300px; /* Hide the sidebar initially */
     transition: left 0.3s, border-radius 0.3s; /* Added transition for border-radius */
     z-index: 20; /* Ensure the sidebar is above the navbar */
@@ -120,7 +121,7 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add a shadow for a floating effect */
 }
 
-.sidebar.visible {
+#sidebar.visible {
     left: 2%; /* Show the sidebar */
 }
 
