--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+
 .home {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
@@ -16,9 +18,8 @@
   grid-column: 1 / 5;
   grid-row: 1 / 3;
   display: flex;
-  justify-content : center;
+  justify-content : left;
   align-items: center;
-  border : 2px solid green; 
 }
 
 .home2 {
@@ -27,23 +28,58 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 2px solid green; 
+  border: 2px solid rgba(256,256,256,0.3); 
 }
 
 .home3 {
   grid-column: 1 / 3; 
   grid-row: 3 / 5;
-  border: 2px solid green ; 
+  border: 2px solid rgba(256,256,256,0.3); 
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
 }
 
 .home4 {
   grid-column: 3 / 5;
   grid-row: 3 / 5;
-  border : 2px solid green; 
+  border : 2px solid rgba(256,256,256,0.3); 
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.Code {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  width : 80%; 
+  height : 80%; 
+  border: 2px solid rgba(256,256,256, 0.3); 
+  border-radius: 15px;
+  background-color: rgb(16, 11, 71, 0.4);
+  -webkit-backdrop-filter: blur( 3px );
+}
+
+.Code h2 {
+  margin-left : 20px; 
+  font-family: "Source Code Pro", monospace;
+}
+
+.typewriter h2 {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .4em solid white; /* The typwriter cursor */
+  font-family: "Source Code Pro", monospace;
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin-left: 10px; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .05em; /* Adjust as needed */
+  animation: 
+    blink-caret .75s step-end infinite;
+}
+
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent; }
+  50% { border-color: white; }
 }
