Fix home3 centering

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -36,7 +36,7 @@
   grid-row: 3 / 5;
   border: 2px solid rgba(256,256,256,0.3); 
   display: flex;
-  justify-content: left;
+  justify-content: center;
   align-items: center;
 }
 
