--- a/src/css/anibg.css
+++ b/src/css/anibg.css
@@ -25,7 +25,7 @@ body {
   --tail-fade-duration: var(--fall-duration);
   position: absolute;
   top: var(--top-offset);
-  left: 0;
+  left: 100px;
   width: var(--star-tail-length);
   height: var(--star-tail-height);
   color: var(--star-color);
