Revert "Fix stars getting glitched in the corner"
This reverts commit 6a6033e480fbffb7e2c4bc51e0d5602d5b62d377.

--- a/src/css/anibg.css
+++ b/src/css/anibg.css
@@ -25,7 +25,7 @@ body {
   --tail-fade-duration: var(--fall-duration);
   position: absolute;
   top: var(--top-offset);
-  left: 100px;
+  left: 0;
   width: var(--star-tail-length);
   height: var(--star-tail-height);
   color: var(--star-color);
