--- a/src/css/aniBg.scss
+++ b/src/css/aniBg.scss
@@ -9,7 +9,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-   background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
+   background: radial-gradient(ellipse at bottom, #16429f 30%, #1c226c 70%);
   overflow: hidden;
 }
 
