--- a/src/css/anibg.css
+++ b/src/css/anibg.css
@@ -3,7 +3,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
+  background: radial-gradient(ellipse at bottom, #16429f 30%, #0d1252 90%);
   overflow: hidden;
 }
 
