--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,7 +12,7 @@ div.section {
 
 body {
     font-family: Arial, sans-serif;
-    background: linear-gradient(135deg, #171a3b 30% , #162e61 85%) ;
+    background: linear-gradient(135deg, #1c226c 30% , #16429f 70%) ;
 }
 
 
@@ -88,7 +88,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color : transparent;
+    background-color : rgba(256, 256,256, 0.05);
     -webkit-backdrop-filter: blur( 2px );
     border-radius: 20px;
     border : 1px solid rgba(256, 256, 256 , 0.3); 
